--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    margin: 0;
+    color: white;
+    background-color: #22254b;
+    display: flex;
+    flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.book-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.book {
+    width: 300px;
+    height: 500px;
+    margin: 1rem;
+    position: relative;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    background-color: #373b69;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+
 }
 
-.App-link {
-  color: #61dafb;
+.book img {
+    height: 85%;
+    width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.book-info {
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.book-info h3 {
+    margin: 0;
+}
+
+.book-over {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    color: #22254b;
+    padding: 1rem;
+    overflow: auto;
+    max-height: 50%;
+    transform: translateY(201%);
+    transition: transform 0.3s ease-in-out;
+    -ms-overflow-style: none;
+  	scrollbar-width: none;
+}
+
+.book:hover .book-over {
+	transform: translateY(70%);
+}
+
+.book-over::-webkit-scrollbar {
+	display: none;
 }
